--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
       <body style="background-color:Aquamarine;">
              <pre>
              <h1>Devops TASK 4</h1>
-             <h1>Hello Everyone !!</h1>
+             <h1>Rolling Update !!</h1>
             </pre>
       </body>
 </html>
